<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_go_map"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_map" />
        <item
            android:id="@+id/nav_go_points"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_points" />
        <item
            android:id="@+id/nav_go_tasks"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/action_tasks" />
        <item
            android:id="@+id/nav_go_messages"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_messages" />
        <item
            android:id="@+id/nav_go_controls"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/action_controls" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_go_controls_settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/action_controls_settings" />
            <item
                android:id="@+id/nav_go_exit"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_exit" />
        </menu>
    </item>

</menu>
